support bundled JRE on Windows